--- a/RibinProject/package.json
+++ b/RibinProject/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
